# ricardo-worktrial

./: .gitignore  GOAL.md  README.md  decisions.md  pyproject.toml
docs/: decisions.md  eks-dev-local-setup.md  terraform-remote-state.md
environments/eks-dev/: backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  tfplan  tfplan.eks  variables.tf  versions.tf
examples/: README.md
examples/kustomize-jobs/: README.md
examples/kustomize-jobs/gpu-multinode-dtensor/: README.md  compute-config.yaml
examples/kustomize-jobs/jobs/gpu-multinode-dtensor/: README.md  job-config.yaml
examples/kustomize-jobs/jobs/rayjob-remote-task-fanout/: README.md
examples/kustomize-jobs/non-ray-hello/: README.md  compute-config.yaml  job-config.yaml
examples/kustomize-jobs/rayjob-remote-task-fanout/: README.md  compute-config.yaml  job-config.yaml
examples/raw-jobs/: README.md
examples/raw-jobs/gpu-multinode-dtensor/: README.md
examples/raw-jobs/gpu-testing/: README.md  torch-distributed-dtensor-job.yaml
examples/raw-jobs/rayjob-remote-task-fanout/: README.md  rayjob-remote-task-fanout.yaml
modules/distributed-job/: main.tf  variables.tf
modules/eks-cluster/: cluster.tf  iam.tf  networking.tf  node-groups.tf  outputs.tf  variables.tf  versions.tf
modules/kuberay/: main.tf  variables.tf  versions.tf
modules/kueue/: main.tf  variables.tf
modules/ray-cluster/: main.tf  variables.tf
tools/brrr/: __init__.py  __main__.py  cli.py  models.py  renderers.py
tools/brrr/templates/: README.md
